--- a/src/scss/contacts.scss
+++ b/src/scss/contacts.scss
@@ -9,13 +9,12 @@
         }
     }
     &__icon {
+        display: block;
         width: 24px;
         height: 24px;
         margin-right: 14px;
     }
     &__inf {
-        font-style: normal;
-        font-weight: normal;
         font-size: 16px;
         line-height: 21px;
         letter-spacing: 0.02em;
