--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -18,4 +18,41 @@
         height: 1px;
         background-color:rgba(255, 255, 255, 0.2);
     }
+    &__politics {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: start;
+    }
+    &__copyright {
+        font-size: 12px;
+        color: #404040;
+    }
+    &__descr {
+        width: 566px;
+        margin-top: 10px;
+        font-size: 12px;
+        line-height: 14px;
+        color: #404040;
+    }
+    &__kontur {
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    &__tagline {
+        font-family: 'M PLUS 1p', sans-serif;
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 18px;
+        color: #FFFFFF;
+        margin-right: 12px;
+    }
+    &__logo-kontur {
+        width: 58.16px;
+        height: 38.71px;
+    }
+
 }
