--- a/src/scss/form.scss
+++ b/src/scss/form.scss
@@ -7,11 +7,8 @@
         background: #FFFFFF;
         border: 1px solid #E1CEBE;
         border-radius: 3px;
-        font-style: normal;
-        font-weight: normal;
         font-size: 12px;
-        color: #E1CEBE;
-        outline: none;
+        color: #404040;
         &::placeholder {
             color: #E1CEBE;
             font-size: 12px;
@@ -27,9 +24,6 @@
         img {
             width: 24px;
             height: 24px;
-        }
-        &:active, &:focus {
-            outline: none;
         }
     }
 }
