--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,7 +7,7 @@
     border: none;
 }
 // font-family: 'Montserrat Alternates', sans-serif;
-
+@import 'bootstrap-reboot.min.scss';
 @import 'header.scss';
 @import 'form.scss';
 @import 'nav.scss';
@@ -20,6 +20,7 @@
 @import 'about.scss';
 @import 'footer.scss';
 @import 'contacts.scss';
+@import 'nav-catalog.scss';
 
 a {
     text-decoration: none;
@@ -31,17 +32,17 @@ a {
     }
 
 }
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, p {
     margin: 0;
     padding: 0;
 }
 
-button {
+button, input {
     &:active, &:focus {
         outline: none;
     }
 }
-li, ol, ul {
+ol, ul, li{
     padding: 0;
     margin: 0;
     list-style-type: none
@@ -52,9 +53,4 @@ li, ol, ul {
     width: 1097px;
     height: 100%;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    &-fs {
-        align-items: flex-start; 
-    }
 }
