--- a/src/scss/dropright.scss
+++ b/src/scss/dropright.scss
@@ -35,7 +35,7 @@
         line-height: 17px;
         color: #404040;
         margin-top: 15px;
-        &:active {
+        &:hover {
             color: #566E98;
         }
     }
