--- a/src/scss/goods.scss
+++ b/src/scss/goods.scss
@@ -7,10 +7,11 @@
         color: #404040;
     }
     &__cards {
-        margin-top: 21px;
+        margin-top: 0;
         display: flex;
         justify-content: space-between;
         align-items: center;
+        flex-wrap: wrap
     }
     &__item {
         position: relative;
@@ -20,6 +21,7 @@
         background-color: #EBEDEE;
         border-bottom-left-radius: 3px;
         border-bottom-right-radius: 3px;
+        margin-top: 21px;
         &_focus {
             border: 2px solid #E1CEBE; 
             border-radius: 3px; 
