--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -1,11 +1,8 @@
 .nav {
-    height: 100%;
-    width: 100%;
+    margin: 0 auto;
     &__list {
-        width: 100%;
         display: flex;
         align-items: center;
-        justify-content: space-between;
     }
     &__link  {
         display: block;
