--- a/src/scss/sidebar.scss
+++ b/src/scss/sidebar.scss
@@ -7,7 +7,6 @@
     padding: 22px 14px 36px 28px;
     &__title {
         margin-bottom: 8px;
-        font-style: normal;
         font-weight: 500;
         font-size: 24px;
         color: #404040;
@@ -15,22 +14,18 @@
     &__new {
         margin-top: 18px;
     }
-    &__data {
+    &__date {
         padding: 8px 0;
         width: 64px;
         height: 27px;
         background-color: #BED1E1;
         border-radius: 3px;
         text-align: center;
-        font-style: normal;
-        font-weight: normal;
         font-size: 12px;
         color: #404040;
     }
     &__new-descr {
-        margin: 0;
         margin-top: 9px;
-        font-style: normal;
         font-weight: 500;
         font-size: 14px;
         line-height: 19px;
