--- a/src/scss/form.scss
+++ b/src/scss/form.scss
@@ -1,7 +1,7 @@
 .form {
     position: relative;
     &__input-text {
-        width: 520px;
+        width: 100%;
         height: 40px;
         padding: 11px 53px 15px 20px;
         background: #FFFFFF;
