--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,9 +4,29 @@
     &__content {
         margin-left: 25px;
     }
+    
     &__side {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
+        
+        // display: flex;
+        // flex-direction: column;
+        // align-items: flex-start;
+
     }
+}
+.aside-fixed--top {
+    .main__side {
+        
+    }
+    // .main__wrapper-inner_1 {
+    //     position: fixed;
+    //     top: 0;
+    //     right: 0;
+    //     left: 0;
+    // }
+    // .main__wrapper-inner_2 {
+    //     padding: 30px 0 57px;
+    //     background-color: #fff;
+    //     display: flex;
+    //     justify-content: flex-start;
+    // }
 }
