--- a/src/scss/media.scss
+++ b/src/scss/media.scss
@@ -1,25 +1,17 @@
 @media(max-width: 1200px) {
     .container {
-        width: 95vw;
-    }
-    .header {
-        &__center-block {
-            margin-left: 0;
-        }
+        width: 88vw;
     }
     .nav {
+        width: 88vw;
         &__link {
             width: 120px;
         }
         &__item {
-            margin-right: 5px;
             &:nth-child(2) {
                 .nav__link {
                     width: 150px;
                 }
-            }
-            &:last-child {
-                margin-right: 0;
             }
         }
     }
@@ -29,6 +21,7 @@
         &-caption {
             width: 75%;
             height: 25%;
+            padding: 4% 0 4%;
         }
     }
     .goods{
@@ -37,9 +30,7 @@
             align-items: flex-start;
         }
         &__item {
-            &:nth-child(1) {
-                margin-right: 24px;
-            }
+            margin-right: 24px;
         }
     }
     .promotion {
@@ -59,14 +50,6 @@
             width: 90vw;
         }
     }
-    .main {
-        .container {
-            justify-content: center;
-        }
-        &__content {
-            width: 60%;
-        }
-    }
     .contacts {
         width: 70%;
         margin-right: 18px;
@@ -75,18 +58,84 @@
             margin-right: 0;
         }
     }
+    .nav-catalog {
+        &__title {
+            width: 208px;
+        }
+        &__list {
+            width: 208px;
+        }
+    }
+    .drop {
+        &__menu {
+            left: 180px;
+            width: 227px;
+            height: 156px;
+            padding-left: 19px;
+        }
+        &__link {
+            font-size: 12px;
+            
+        }
+    }
+    .main {
+        &__content {
+            margin-left: 25px;
+        }
+    }
+    .sidebar {
+        width: 208px;
+    }
 
 }
 @media(max-width: 991px) {
-    .container {
-        width: 93vw;
+
+    .header {
+        &__main {
+            max-height: 132px;
+        }
+        &__center-block {
+            width: 380px;
+            margin-left: 16px;
+        }
+        &__text {
+            margin-top: 17px;
+        }
+        &__logo {
+            width: 121px;
+            height: auto;
+        }
+    }
+    .nav {
+        &__link {
+            width: 90px;
+        }
+        &__item {
+            &:nth-child(2) {
+                .nav__link {
+                    width: 155px;
+                }
+            }
+            &:nth-child(6) {
+                .nav__link {
+                    width: 115px;
+                }
+            }
+        }
+    }
+    .carousel {
+        &-caption {
+            width: 70%;
+        }
+        &-control-prev, &-control-next {
+            width: 13%;
+        }
     }
     .goods {
         &__item {
-            width: 220px;
-            &:nth-child(1) {
-                margin-right: 12px;
-            }
+            width: 203px;
+            height: 445px;
+            margin-right: 11px;
         }
         &__img {
             width: 100%;
@@ -101,27 +150,29 @@
         &__line {
             width: 90%;
             &-1 {
-                bottom: 39%;
+                bottom: 32%;
             }
             &-2 {
-                bottom: 131px;
+                bottom: 85px;
             }
         }
-        &__add {
-            flex-direction: column;
-        }
         &__btn {
-            margin-top: 10px;
+            width: 90px;
         }
         &__quantity {
-            margin-right: 0;
-            height: 36px;
+            margin-right: 10px;
+            height: 40px;
+            width: 85px;
+            h4 {
+                margin: 0 14px;
+
+            }
         }
         .mt-65 {
-            margin-top: 62px;
+            margin-top: 72px;
         }
         .mt-44 {
-            margin-top: 42px;
+            margin-top: 31px;
         }
     }
     .contacts {
@@ -138,6 +189,299 @@
             }
             &:nth-child(3) {
                 order: 2;
+            }
+        }
+    }
+}
+
+@media(max-width: 767px) {
+    .header {
+        &__main {
+            .header__container {
+                justify-content: space-around;
+            }
+        }
+        &__logo {
+            display: none;
+        }
+        &__center-block {
+            width: 360px;
+            margin-left: 0;
+        }
+        &__link {
+            margin-right: 14px;
+            h4 {
+                font-size: 14px;
+            }
+        }
+        &__anchor {
+            font-size: 12px;
+            margin-right: 25px;
+        }
+    }
+    .carousel {
+        &-caption {
+            padding: 2% 0 2%;
+            width: 60%;
+        }
+        &__title{
+            font-size: 20px;
+        }
+        &-control-prev, &-control-next {
+            &-icon {
+                width: 17px;
+                height: 28px;
+            }
+        }
+        &-indicators {
+            li {
+                width: 26px;
+                height: 7.7px;
+            }
+        }
+        
+    }
+
+    .hamburger {
+        display: block;
+        position: absolute;
+        left: 13px;
+        top: 41px;
+        z-index: 6;
+        transform: translateY(-50%);
+        width: 22px;
+        height: 12px;
+        span {
+            position: absolute;
+            display: block;
+            height: 3px;
+            width: 100%;
+            background-color: #566E98;
+            margin-bottom: 5px;
+            transition: 0.5s all;
+            &:nth-child(1) {
+                transform: translateY(3px) rotate(45deg);
+                left: 2px;
+                top: 0
+            }
+            &:nth-child(2) {
+                transform: translateY(3px) rotate(-45deg);
+                left: 16px;
+                top: 4%;
+            }
+        }
+        &_active {
+            span {
+                margin-bottom: -2px;
+                &:nth-child(1) {
+                    transform: translateY(3px) rotate(135deg);
+                }
+                &:nth-child(2) {
+                    transform: translateY(3px) rotate(45deg);
+                }
+            }
+        }
+    }
+    .nav-catalog {
+        &__title {
+            padding-left: 61px;
+            height: 81px;
+            width: 208px;
+            border-bottom-left-radius: 3px;
+            border-bottom-right-radius: 3px;
+            &_active {
+                border-bottom-left-radius: 0px;
+                border-bottom-right-radius: 0px;
+            }
+        }
+        &__list {
+            display: none;
+            width: 208px;
+            &_active {
+                display: none;
+                // display: block;
+            }
+        }
+    }
+    // .nav {
+    //     &__list {
+    //         position: fixed;
+    //         z-index: 6;
+    //         top: 0;
+    //         right: -100%;
+    //         width: 50%;
+    //         height: 100vh;
+    //         padding: 20px 15px;
+    //         flex-direction: column;
+    //         justify-content: center;
+    //         align-items: center;
+    //         background-color: rgba(0,0,0, .8);
+    //         transition: 0.5s all;
+    //         &_active {
+    //             right: 0;
+    //         }
+    //     }
+    //     &__item {
+    //         padding-right: 0;
+    //         border: none;
+    //         margin: 10px 0;
+    //         a {
+    //         font-size: 20px;
+    //         }
+    //     }
+    // }
+    .nav {
+        &__link {
+            width: 75px;
+            h4 {
+                font-size: 14px;
+            }
+        }
+        &__item {
+            &:nth-child(2) {
+                .nav__link {
+                    width: 135px;
+                }
+            }
+            &:nth-child(6) {
+                .nav__link {
+                    width: 98px;
+                }
+            }
+            &:nth-child(1), &:nth-child(3), &:nth-child(4) {
+                .nav__link {
+                    width: 64px;
+                }
+            }
+
+        }
+    }
+    
+    
+    // .main {
+    //     // position: relative;
+    //     // &__side {
+    //     //     position: absolute;
+    //     //     top: 429px;
+    //     //     left: 48px;
+    //     // }
+    //     // &__content {
+    //     //     margin-left: 0;
+    //     // }
+    //     // &__wrapper_level-1 {
+    //     //     display: flex;
+    //     //     justify-content: center;
+    //     //     align-items: start;
+    //     // }
+    //     // &__wrapper_level-2 {
+    //     //     margin-left: 25px;
+    //     // }
+    //     // &__empty-block {
+    //     //     width: 358px;
+    //     //     height: 1000px;
+    //     // }
+    // }
+    .goods {
+        &__item {
+            margin-right: 30px;
+        }
+    }
+}
+
+@media(max-width: 575px) {
+    .header {
+        &__main {
+            max-height: 60px;
+        }
+        &__center-block {
+            width: 60%;
+            margin-bottom: 10px;
+        }
+        &__text {
+            display: none;
+        }
+        &__form {
+            margin-top: 0;
+        }
+        &__car {
+            width: 104px;
+            height: 40px;
+            margin-bottom: 10px;
+        }
+        &__car-logo {
+            width: 31px;
+            height: 31px;
+            margin-right: 12px;
+        }
+        &__quantity-in-car {
+            width: 31px;
+            height: 22px;
+            h5 {
+                font-size: 12px;
+            }
+        }
+        &__phones {
+            flex-direction: column;
+        }
+        &__link {
+            &:first-child {
+                margin-right: 0;
+                margin-bottom: 1px;
+            }
+            h4 {
+                font-size: 10px;
+            }
+            
+        }
+        &__anchor {
+            font-size: 10px;
+            margin-right: 14px;
+        }
+        &__inf {
+            height: 30px;
+            // .header__container {
+            //     justify-content: space-between;
+            // }
+        }
+    }
+    .carousel {
+        &-caption {
+            padding: 2% 0 2%;
+            width: 60%;
+        }
+        &__title{
+            font-size: 20px;
+        }
+        &-control-prev, &-control-next {
+            &-icon {
+                width: 12px;
+                height: 20px;
+            }
+        }
+        &-indicators {
+            li {
+                width: 20px;
+                height: 6px;
+            }
+        }
+        
+    }
+}
+
+@media(max-width: 320px) {
+    .header {
+        &__inf {
+            height: 21px;
+        }
+        &__anchor {
+            margin-right: 25px;
+        }
+        &__phones {
+            display: none;
+        }
+        &__inf {
+            .header__container {
+                justify-content: center;
             }
         }
     }
