--- a/src/scss/promotion.scss
+++ b/src/scss/promotion.scss
@@ -13,6 +13,7 @@
     &__item {
         position: relative;
         margin-top: 15px;
+        width: 260px;
     }
     &__img {
         display: block;
