--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -51,7 +51,7 @@ ol, ul, li{
 .container {
     padding: 0;
     margin: 0 auto;
-    max-width: 1097px;
+    width: 1097px;
     height: 100%;
     display: flex;
 }
