--- a/src/scss/contacts.scss
+++ b/src/scss/contacts.scss
@@ -1,13 +1,12 @@
 .contacts {
     display: flex;
-    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-start;
+    width: 831px;
     &__item {
         display: flex;
         align-items: flex-start;
-        margin-right: 144px;
-        &:nth-child(3) {
-            margin-right: 0;
-        }
+        justify-content: start;
     }
     &__icon {
         display: block;
