--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -1,6 +1,8 @@
 @media(max-width: 1200px) {
-    .container {
-        width: 88vw;
+    .header {
+        &__container {
+            width: 88vw;
+        }
     }
     .nav {
         width: 88vw;
@@ -92,7 +94,6 @@
             
         }
     }
-    
     .sidebar {
         width: 208px;
     }
@@ -101,15 +102,9 @@
 @media(max-width: 991px) {
 
     .header {
-        &__main {
-            max-height: 132px;
-        }
         &__center-block {
             width: 380px;
             margin-left: 16px;
-        }
-        &__text {
-            margin-top: 17px;
         }
         &__logo {
             width: 121px;
@@ -231,17 +226,15 @@
         
     }
     .header {
-        &__main {
-            .header__container {
-                justify-content: space-around;
-            }
-        }
         &__logo {
             display: none;
         }
         &__center-block {
-            width: 360px;
             margin-left: 0;
+            width: 370px;
+        }
+        &__text {
+            font-size: 15px;
         }
         &__link {
             margin-right: 14px;
@@ -252,6 +245,9 @@
         &__anchor {
             font-size: 12px;
             margin-right: 25px;
+        }
+        &__car {
+            height: 68px;
         }
     }
     .carousel {
@@ -276,95 +272,6 @@
         }
         
     }
-
-    // .hamburger {
-    //     display: block;
-    //     position: absolute;
-    //     left: 13px;
-    //     top: 41px;
-    //     z-index: 6;
-    //     transform: translateY(-50%);
-    //     width: 22px;
-    //     height: 12px;
-    //     span {
-    //         position: absolute;
-    //         display: block;
-    //         height: 3px;
-    //         width: 100%;
-    //         background-color: #566E98;
-    //         margin-bottom: 5px;
-    //         transition: 0.5s all;
-    //         &:nth-child(1) {
-    //             transform: translateY(3px) rotate(45deg);
-    //             left: 2px;
-    //             top: 0
-    //         }
-    //         &:nth-child(2) {
-    //             transform: translateY(3px) rotate(-45deg);
-    //             left: 16px;
-    //             top: 4%;
-    //         }
-    //     }
-    //     &_active {
-    //         span {
-    //             margin-bottom: -2px;
-    //             &:nth-child(1) {
-    //                 transform: translateY(3px) rotate(135deg);
-    //             }
-    //             &:nth-child(2) {
-    //                 transform: translateY(3px) rotate(45deg);
-    //             }
-    //         }
-    //     }
-    // }
-    // .nav-catalog {
-    //     &__title {
-    //         padding-left: 61px;
-    //         height: 81px;
-    //         width: 208px;
-    //         border-bottom-left-radius: 3px;
-    //         border-bottom-right-radius: 3px;
-    //         &_active {
-    //             border-bottom-left-radius: 0px;
-    //             border-bottom-right-radius: 0px;
-    //         }
-    //     }
-    //     &__list {
-    //         display: none;
-    //         width: 208px;
-    //         &_active {
-    //             display: none;
-    //             // display: block;
-    //         }
-    //     }
-    // }
-    // .nav {
-    //     &__list {
-    //         position: fixed;
-    //         z-index: 6;
-    //         top: 0;
-    //         right: -100%;
-    //         width: 50%;
-    //         height: 100vh;
-    //         padding: 20px 15px;
-    //         flex-direction: column;
-    //         justify-content: center;
-    //         align-items: center;
-    //         background-color: rgba(0,0,0, .8);
-    //         transition: 0.5s all;
-    //         &_active {
-    //             right: 0;
-    //         }
-    //     }
-    //     &__item {
-    //         padding-right: 0;
-    //         border: none;
-    //         margin: 10px 0;
-    //         a {
-    //         font-size: 20px;
-    //         }
-    //     }
-    // }
     .nav {
         &__link {
             width: 75px;
@@ -391,31 +298,6 @@
 
         }
     }
-    
-    
-    // .main {
-    //     // position: relative;
-    //     // &__side {
-    //     //     position: absolute;
-    //     //     top: 429px;
-    //     //     left: 48px;
-    //     // }
-    //     // &__content {
-    //     //     margin-left: 0;
-    //     // }
-    //     // &__wrapper_level-1 {
-    //     //     display: flex;
-    //     //     justify-content: center;
-    //     //     align-items: start;
-    //     // }
-    //     // &__wrapper_level-2 {
-    //     //     margin-left: 25px;
-    //     // }
-    //     // &__empty-block {
-    //     //     width: 358px;
-    //     //     height: 1000px;
-    //     // }
-    // }
     .goods {
         &__item {
             height: 384px;
@@ -504,12 +386,52 @@
 
 @media(max-width: 575px) {
     .header {
+        &__container {
+            position: relative;
+        }
+        &__hamburger {
+            display: block;
+            position: absolute;
+            right: 0;
+            top: 45%;
+            transform: translateY(-50%);
+            width: 26px;
+            height: 12px;
+            span {
+                display: block;
+                height: 3px;
+                width: 100%;
+                background-color: white;
+                margin-bottom: 5px;
+                transition: 0.5s all;
+            }
+            &_active {
+                span {
+                    &:nth-child(1) {
+                        transform: translateY(3px) rotate(-45deg);
+                        margin-bottom: -2px;
+                    }
+                    &:nth-child(2) {
+                        display: none;
+                    }
+                    &:nth-child(3) {
+                        transform: translateY(3px) rotate(45deg);
+                        margin-bottom: -3px;
+                    }
+                }
+            }
+
+        }
         &__main {
-            max-height: 60px;
+            height: 0;
         }
         &__center-block {
             width: 60%;
-            margin-bottom: 10px;
+            margin-bottom: 0px;
+            position: absolute;
+            top: 10px;
+            left: 0;
+            z-index: 6;
         }
         &__text {
             display: none;
@@ -518,20 +440,24 @@
             margin-top: 0;
         }
         &__car {
-            width: 104px;
+            width: 26%;
+
             height: 40px;
-            margin-bottom: 10px;
+            margin-bottom: 0px;
+            position: absolute;
+            top: 10px;
+            right: 13%;
         }
         &__car-logo {
-            width: 31px;
-            height: 31px;
-            margin-right: 12px;
+            width: 25px;
+            height: auto;
+            margin-right: 10%;
         }
         &__quantity-in-car {
-            width: 31px;
-            height: 22px;
+            width: 25px;
+            height: auto;
             h5 {
-                font-size: 12px;
+                font-size: 10px;
             }
         }
         &__phones {
@@ -553,12 +479,10 @@
         }
         &__inf {
             height: 30px;
-            // .header__container {
-            //     justify-content: space-between;
-            // }
         }
     }
     .carousel {
+        margin-top: 30px;
         &-caption {
             padding: 2% 0 2%;
             width: 60%;
@@ -623,6 +547,175 @@
         }
         
     }
+    .nav {
+        &__list {
+            display: none;
+            position: absolute;
+            z-index: 6;
+            top: 59px;
+            left: 56.9%;
+            width: 50%;
+            z-index: 6;
+            width: 50%;
+            height: 100vh;
+            padding: 20px 15px;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            background-color: rgba(#E1CEBE, .8);
+            transition: 0.5s all;
+            &_active {
+                display: block;
+            }
+        }
+        &__item {
+            padding-right: 0;
+            border: none;
+            margin: 10px 0;
+            text-align: center;
+        }
+        &__link {
+            display: inline;
+            font-size: 20px;
+            padding: 0;
+            height: 21px;
+            background-color: transparent;
+            &:hover, &:active {
+                h4 {
+                    color: #fff;
+                }
+                background-color: transparent;
+            }
+        }
+    }
+    
+    .main {
+        &__side {
+            display: none;
+        }
+        &__content {
+            margin-left: 0px;
+        }
+        .catalog {
+            display: block;
+        }
+    }
+    .nav-catalog {
+        &__hamburger {
+            display: block;
+            position: absolute;
+            right: 42px;
+            top: 41px;
+            z-index: 5;
+            transform: translateY(-50%);
+            width: 22px;
+            height: 12px;
+            span {
+                position: absolute;
+                display: block;
+                height: 3px;
+                width: 100%;
+                background-color: #566E98;
+                margin-bottom: 5px;
+                transition: 0.5s all;
+                &:nth-child(1) {
+                    transform: translateY(3px) rotate(45deg);
+                    left: 2px;
+                    top: 0
+                }
+                &:nth-child(2) {
+                    transform: translateY(3px) rotate(-45deg);
+                    left: 16px;
+                    top: 4%;
+                }
+            }
+            &_active {
+                span {
+                    margin-bottom: -2px;
+                    &:nth-child(1) {
+                        transform: translateY(3px) rotate(135deg);
+                    }
+                    &:nth-child(2) {
+                        transform: translateY(3px) rotate(45deg);
+                    }
+                }
+            }
+        }
+        &__title {
+            height: 81px;
+            width: 208px;
+            border-bottom-left-radius: 3px;
+            border-bottom-right-radius: 3px;
+            &_active {
+                border-bottom-left-radius: 0px;
+                border-bottom-right-radius: 0px;
+            }
+        }
+        &__list {
+            display: none;
+            width: 100%;
+            height: 100%;
+            &_active {
+                display: none;
+                // display: block;
+            }
+        }
+        
+    }
+    .drop {
+        &__img {
+            transform: rotate(90deg);
+            &_active {
+                transform: rotate(-90deg);
+                
+            }
+        }
+        &__link {
+            
+            margin-top: 10px;
+
+        }
+        &__menu {
+            display: none;
+            height: 123px;
+            position: static;
+            width: 100%;
+            background-color: #BED1E1;
+            padding: 9px 13px 9px 37px;
+            &_active {
+                display: block;
+                left: -16px;
+                top: 39px;
+                padding-left: 54px;
+            }
+            
+        }
+    }
+    .goods {
+        
+        &__item {
+            &:nth-child(2n-1) {
+                margin-right: 10px;
+            }
+            
+            &:nth-child(2) {
+                margin-right: 0;
+            }
+
+        }
+    }
+    .promotion {
+        &__item {
+            margin-right: 0;
+            width: 210px;
+            &:nth-child(2n-1) {
+                margin-right: 10px;
+            }
+        }
+        &__date {
+            top: 149px;
+        }
+    }
 }
 @media(max-width: 460px) {
     .footer{
@@ -658,31 +751,38 @@
         }
     }
     .contacts {
-        width: 70%;
+        width: 220px;
         &__inf {
             font-size: 8px;
         }
-        // &__item {
-        //     &:nth-child(1) {
-        //         margin-top: 5px;
-        //         order: 2;
-        //     }
-        //     &:nth-child(2) {
-        //         margin-top: 5px;
-        //         order: 3;
-        //     }
-        //     &:nth-child(3) {
-        //         order: 1;
-        //     }
-        // }
+        &__item {
+            &:nth-child(2) {
+                margin-top: 0;
+            }
+            
+        }
+
+    }
+    .goods {
+        &__item {
+            &:nth-child(2n-1) {
+                margin-right: 0px;
+            }
+            
+        }
+    }
+    .promotion {
+        &__item {
+            &:nth-child(2n-1) {
+                margin-right: 0px;
+            }
+            
+        }
     }
 
 }
 @media(max-width: 320px) {
     .header {
-        &__inf {
-            height: 21px;
-        }
         &__anchor {
             margin-right: 25px;
         }
@@ -694,5 +794,23 @@
                 justify-content: center;
             }
         }
+    }
+    .drop {
+        &__menu {
+            padding-left: 29px;
+        }
+    }
+    .carousel {
+        &__title {
+            font-size: 20px;
+        }
+    }
+    .footer {
+        &__logo-brand {
+            width: 55px;
+        }
+    }
+    .contacts {
+        width: 210px;
     }
 }
