--- a/src/scss/_promotion.scss
+++ b/src/scss/_promotion.scss
@@ -44,7 +44,7 @@
     &__descr {
         display: block;
         margin-top: 23px;
-        width: 259px;
+        width: 100%;
         font-style: normal;
         font-weight: 500;
         font-size: 16px;
