--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,21 +7,21 @@
     border: none;
 }
 // font-family: 'Montserrat Alternates', sans-serif;
-@import 'bootstrap-reboot.min.scss';
-@import 'header.scss';
-@import 'form.scss';
-@import 'nav.scss';
-@import 'carousel.scss';
-@import 'main.scss';
-@import 'goods.scss';
-@import 'promotion.scss';
-@import 'dropright.scss';
-@import 'sidebar.scss';
-@import 'about.scss';
-@import 'footer.scss';
-@import 'contacts.scss';
-@import 'nav-catalog.scss';
-@import 'media.scss';
+@import '_bootstrap-reboot.min.scss';
+@import '_header.scss';
+@import '_form.scss';
+@import '_nav.scss';
+@import '_carousel.scss';
+@import '_main.scss';
+@import '_goods.scss';
+@import '_promotion.scss';
+@import '_dropright.scss';
+@import '_sidebar.scss';
+@import '_about.scss';
+@import '_footer.scss';
+@import '_contacts.scss';
+@import '_nav-catalog.scss';
+@import '_media.scss';
 
 a {
     text-decoration: none;
@@ -47,11 +47,4 @@ ol, ul, li{
     padding: 0;
     margin: 0;
     list-style-type: none
-}
-.container {
-    padding: 0;
-    margin: 0 auto;
-    width: 1097px;
-    height: 100%;
-    display: flex;
 }
